# ansys-aedt-mcp

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
assets/logo/: ansys-aedt-mcp-logo.prompt.json  ansys-aedt-mcp-logo.research.json  ansys-aedt-mcp-logo.revised-prompt.txt
docs/: capability-map.md  ci-workflow.example.yml  client-config.md  roadmap.md  verification.md
examples/: README.md
examples/workflows/: circuit-touchstone-workflow.md  hfss-sparameter-workflow.md  icepak-thermal-workflow.md  native-desktop-workflow.md  q3d-net-workflow.md
scripts/: aedt_smoke.py
src/ansysmcp/: __init__.py  __main__.py  operations.py  serialization.py  server.py  session.py
tests/: test_operations.py  test_serialization.py
